# getbring

./: .gitignore  README.md  pyproject.toml
.claude/skills/merge-dependabot/: SKILL.md
.github/workflows/: dependabot-automerge.yml  test.yml
src/getbring/: __init__.py  api.py  auth.py  cli.py
tests/: test_api.py  test_auth.py  test_cli.py  test_completer.py
