[project]
name = "getbring"
version = "0.1.0"
description = "CLI for Bring! shopping lists"
readme = "README.md"
authors = [
    { name = "Benedikt Koeppel", email = "be.public@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click",
    "httpx",
    "prompt-toolkit",
]

[project.scripts]
getbring = "getbring.cli:cli"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
